--- a/template/report.html
+++ b/template/report.html
@@ -16,7 +16,8 @@
 		<div class="row">
 	{% for data in category.data %}
 		<div class="col-6 col-sm-4">
-			<h4>{{ data.title }} {% if data.repute == None %}{% elif data.repute == True %}(Bueno){% elif data.repute == False %}(Malo){% endif %}</h4>
+			<h4>{% if data.icon %}<img src="{{ data.icon }}" />{% endif %}
+			{{ data.title }} {% if data.repute == None %}{% elif data.repute == True %}(Bueno){% elif data.repute == False %}(Malo){% endif %}</h4>
 			{% for snp in data.snp %}
 				<h6>SNP {{ snp.snp }}, tu genotipo {{ snp.genotype }}</h6>
 				<p>{{ snp.info }}</p>
