--- a/template/report.html
+++ b/template/report.html
@@ -15,12 +15,14 @@
 	</h3>
 		<div class="row">
 	{% for data in category.data %}
-		<div class="col-6 col-sm-4">
+		<div class="col-6 col-sm-4" style="padding-bottom: 15px;{% if loop.index % 2 %}background-color: rgba(238, 238, 238, 0.15);{% endif %}">
 			<h4>{% if data.icon %}<img src="{{ data.icon }}" />{% endif %}
 			{{ data.title }} {% if data.repute == None %}{% elif data.repute == True %}(Bueno){% elif data.repute == False %}(Malo){% endif %}</h4>
 			{% for snp in data.snp %}
-				<h6>SNP {{ snp.snp }}, tu genotipo {{ snp.genotype }}</h6>
-				<p>{{ snp.info }}</p>
+				<div style="padding: 1px 5px; {% if loop.index % 2 %}background-color: #eee;{% endif %}">
+					<h6>SNP {{ snp.snp }}, cromosoma {{ snp.chromosome }} tu genotipo {{ snp.genotype }}</h6>
+					<p>{{ snp.info }}</p>
+				</div>
 			{% endfor %}
 		</div>
 		{% if not loop.index % 3 %}
