--- a/template/report.html
+++ b/template/report.html
@@ -26,7 +26,7 @@
 			<h4 style="{% if data.repute == None %}color:#777777;{% elif data.repute == True %}color:#5ece5e;{% elif data.repute == False %}color:rgb(255, 175, 175);{% endif %}">{% if data.icon %}<img src="{{ data.icon }}" />{% endif %}
 			{{ data.title }} {% if data.repute == None %}{% elif data.repute == True %}(Bueno){% elif data.repute == False %}(Malo){% endif %}</h4>
 			{% for snp in data.snp %}
-				<div style="padding: 1px 5px; {% if loop.index % 2 %}background-color: rgb(251, 251, 251);{% endif %}">
+				<div style="padding: 1px 5px;">
 					<h6 style="font-style:italic;font-size:9px;">SNP {{ snp.snp }}, cromosoma {{ snp.chromosome }} tu genotipo {{ snp.genotype }}</h6>
 					<p>{{ snp.info }}</p>
 				</div>
