--- a/template/report.html
+++ b/template/report.html
@@ -25,12 +25,18 @@
 		<div class="col-6 col-sm-4" style="padding-bottom: 15px;border: rgb(251, 251, 251) 1px solid;">
 			<h4 style="{% if data.repute == None %}color:#777777;{% elif data.repute == True %}color:#5ece5e;{% elif data.repute == False %}color:rgb(255, 175, 175);{% endif %}">{% if data.icon %}<img src="{{ data.icon }}" />{% endif %}
 			{{ data.title }} {% if data.repute == None %}{% elif data.repute == True %}(Bueno){% elif data.repute == False %}(Malo){% endif %}</h4>
+			{% if data.snp %}
 			{% for snp in data.snp %}
 				<div style="padding: 1px 5px;">
 					<h6 style="font-style:italic;font-size:9px;">SNP {{ snp.snp }}, cromosoma {{ snp.chromosome }} tu genotipo {{ snp.genotype }}</h6>
 					<p>{{ snp.info }}</p>
 				</div>
 			{% endfor %}
+			{% else %}
+				<div style="padding: 1px 5px;">
+					<p>{{ data.default }}</p>
+				</div>
+			{% endif %}
 		</div>
 		{% if not loop.index % 3 %}
 			</div>
