--- a/template/report.html
+++ b/template/report.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="template/css/bootstrap.min.css">
 <link rel="stylesheet" href="template/css/bootstrap-theme.min.css" >
-
+<title>Informe gen&oacute;mico</title>
 </head>
 <body>
 
