--- a/template/report.html
+++ b/template/report.html
@@ -23,7 +23,7 @@
 	</h3>
 		<div class="row">
 	{% for data in category.data %}
-		<div class="col-6 col-sm-4" style="padding-bottom: 15px;border: rgb(251, 251, 251) 1px solid;">
+		<div class="col-6 col-sm-4" style="padding-bottom: 15px;border: #eee 1px solid;">
 			<h4 style="{% if data.repute == None %}color:#777777;{% elif data.repute == True %}color:#5ece5e;{% elif data.repute == False %}color:rgb(255, 175, 175);{% endif %}">{% if data.icon %}<img src="{{ data.icon }}" />{% endif %}
 			{{ data.title }} {% if data.repute == None %}{% elif data.repute == True %}(Bueno){% elif data.repute == False %}(Malo){% endif %}</h4>
 			{% if data.snp %}
