--- a/template/report.html
+++ b/template/report.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="shortcut icon" href="template/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="template/css/bootstrap.min.css">
 <link rel="stylesheet" href="template/css/bootstrap-theme.min.css" >
 <title>Informe gen&oacute;mico</title>
@@ -15,8 +16,13 @@
 		}
 	}
 </script>
-<div class="jumbotron">
-      <div class="container">
+<div class="jumbotron" style="position: relative;overflow: hidden;box-shadow: 0 8px 16px -6px black;    background: #00c6ff;
+    background: -webkit-linear-gradient(300deg, rgba(0, 198, 255, 0.5) , purple);
+    background: linear-gradient(300deg, rgba(0, 198, 255, .5) , purple);">
+    <video id="video-background" preload muted autoplay loop style=" position: absolute;top: -275px;right: 0;bottom: 0;left: 0;overflow: hidden;z-index: -101;width:100%;">
+        <source src="template/media/gene.mp4" type="video/mp4">
+    </video>
+      <div class="container" style="color: #c1c1c1;">
         <h1 class="display-3">Informe gen&eacute;tico</h1>
         <p></p>
       </div>
@@ -26,8 +32,8 @@
 
 {% for key, category in result.iteritems() %}
 	<h3 onclick="showHide('{{key}}')">
-		{% if category.icon %}<img src="{{ category.icon }}" />{% endif %}
-		{{ category.title }} <span style="font-size: 15px;">{{ category.data|length }}</span>
+		<!--{% if category.icon %}<img src="{{ category.icon }}" />{% endif %}-->
+		{{ category.title }} <span style="font-size: 15px;">{{ category.data|length }} analizadas</span>
 	</h3>
 		<div id="{{key}}" class="row" style="display:none;padding: 0px 40px;">
 		<table class="table">
@@ -36,8 +42,8 @@
 			<tbody>
 	{% for data in category.data %}
       			<tr class="{% if data.repute == None %}active{% elif data.repute == True %}success{% elif data.repute == False %}danger{% endif %}" onclick="showHide('{{key}}_snp_{{ loop.index }}')">
-      			  <td style="border-top:none;"><h4 style="width: 50%;">{{ data.title }} <div style="float: right;margin-right: -90%;"><span>{{data.bad}}/{{data.total}}</span> <span style="font-size: 10px;">{{data.total_snp}}</span></div></h4>
-					<table id="{{key}}_snp_{{ loop.index }}" class="table" style="display:none;">
+      			  <td style="border-top:none;"><h4 style="width: 50%;">{{ data.title }} <div style="float: right;margin-right: -90%;"><span> Malas: {{data.bad}} Buenas: {{data.good}}</span> <span style="font-size: 10px;">encontradas: {{data.total}} de {{data.total_snp}}</span></div></h4>
+					<table id="{{key}}_snp_{{ loop.index }}" class="table" style="display:none;border:5px #fff solid;">
 						<thead>
 							<tr>
 								<td>SNP</td>
@@ -49,7 +55,7 @@
 						<tbody>
 						{% if data.snp %}
 						{% for snp in data.snp %}
-							<tr>
+							<tr class="{% if snp.repute == None %}active{% elif snp.repute == True %}success{% elif snp.repute == False %}danger{% endif %}">
 								<td>{{ snp.snp }}</td>
 								<td>{{ snp.chromosome }}</td>
 								<td>{{ snp.genotype }}</td>
